[package]
name = "rust-dlc-cli"
version = "0.1.0"
edition = "2021"
description = "DLC compatibility testing CLI tool using rust-dlc"

[[bin]]
name = "dlc-compat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
# Use the latest version from crates.io
dlc-messages = { version = "0.7.1", features = ["use-serde"] }
lightning = { version = "0.0.125", features = ["std"] }
bitcoin = { version = "0.32.2", features = ["serde"] }
secp256k1-zkp = { version = "0.11.0", features = ["serde", "global-context"] } 