[package]
name = "rust-dlc-cli"
version = "0.1.0"
edition = "2021"
description = "DLC compatibility testing CLI tool using rust-dlc"

[[bin]]
name = "dlc-compat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
# Use bennyhodl's fork with DLC input support from PR #4
dlc-messages = { git = "https://github.com/bennyhodl/rust-dlc.git", branch = "spliced-contract", features = ["use-serde"] }
dlc = { git = "https://github.com/bennyhodl/rust-dlc.git", branch = "spliced-contract" }
lightning = { version = "0.0.125", features = ["std"] }
bitcoin = { version = "0.32.2", features = ["serde"] }
secp256k1-zkp = { version = "0.11.0", features = ["serde", "global-context"] }
